--- a/site/index.html
+++ b/site/index.html
@@ -49,7 +49,7 @@
     <div id="toc-collapse" class="navbar-collapse collapse card bg-secondary">
         <ul class="nav flex-column">
             
-            <li class="nav-item" data-level="1"><a href="#welcome-to-mkdocs" class="nav-link">Welcome to MkDocs</a>
+            <li class="nav-item" data-level="1"><a href="#welcome-to-mkdocs" class="nav-link">あああWelcome to MkDocs</a>
               <ul class="nav flex-column">
             <li class="nav-item" data-level="2"><a href="#commands" class="nav-link">Commands</a>
               <ul class="nav flex-column">
@@ -163,5 +163,5 @@ docs/
 
 <!--
 MkDocs version : 1.5.3
-Build Date UTC : 2024-05-01 02:27:29.670638+00:00
+Build Date UTC : 2024-05-01 02:59:05.914797+00:00
 -->
