--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 <li><code>mkdocs new [dir-name]</code> - Create a new project.</li>
 <li><code>mkdocs serve</code> - Start the live-reloading docs server.</li>
 <li><code>mkdocs build</code> - Build the documentation site.</li>
-<li><code>mkdocs -h</code> - Print help message and exit.おいおいおいその２</li>
+<li><code>mkdocs -h</code> - Print help message and exit.その３</li>
 </ul>
 <h2 id="project-layout">Project layout</h2>
 <pre><code>mkdocs.yml    # The configuration file.
@@ -163,5 +163,5 @@ docs/
 
 <!--
 MkDocs version : 1.5.3
-Build Date UTC : 2024-05-01 05:03:17.512475+00:00
+Build Date UTC : 2024-05-01 04:38:59.889824+00:00
 -->
